--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,4 +1,4 @@
-@book{ruby,
+@article{my001,
   title     = {The Ruby Programming Language},
   author    = {Flanagan, David and Matsumoto, Yukihiro},
   year      = {2008},
