ao small advances

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -1,4 +1,4 @@
-@article{key,
+@article{iquilezles,
   author = {iquilezles},
   title = {screen space ambient occlusion},
   year = {2007},
@@ -20,4 +20,19 @@ pages = {97–121},
 numpages = {25},
 location = {San Diego, California},
 series = {SIGGRAPH '07}
+}
+
+@incollection{MCREYNOLDS2005317,
+title = {CHAPTER 15 - Lighting Techniques},
+editor = {TOM McREYNOLDS and DAVID BLYTHE},
+booktitle = {Advanced Graphics Programming Using OpenGL},
+publisher = {Morgan Kaufmann},
+address = {San Francisco},
+pages = {317-359},
+year = {2005},
+series = {The Morgan Kaufmann Series in Computer Graphics},
+isbn = {978-1-55860-659-3},
+doi = {https://doi.org/10.1016/B978-155860659-3.50017-2},
+url = {https://www.sciencedirect.com/science/article/pii/B9781558606593500172},
+author = {TOM McREYNOLDS and DAVID BLYTHE}
 }
