Actualizar ao_references.bib

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -36,3 +36,8 @@ doi = {https://doi.org/10.1016/B978-155860659-3.50017-2},
 url = {https://www.sciencedirect.com/science/article/pii/B9781558606593500172},
 author = {TOM McREYNOLDS and DAVID BLYTHE}
 }
+
+@misc{hystory-background,
+title={Ben Snow: the evolution of ILM’s lighting tools},
+url={https://www.fxguide.com/fxfeatured/ben-snow-the-evolution-of-ilm-lighting-tools/},
+}
