--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -38,6 +38,10 @@ author = {TOM McREYNOLDS and DAVID BLYTHE}
 }
 
 @misc{hystory-background,
-title={Ben Snow: the evolution of ILM’s lighting tools},
-url={https://www.fxguide.com/fxfeatured/ben-snow-the-evolution-of-ilm-lighting-tools/},
+author = {NEO January, et al.},
+title = {Ben Snow: the evolution of ILM’s lighting tools},
+url = {https://www.fxguide.com/fxfeatured/ben-snow-the-evolution-of-ilm-lighting-tools/},
+year = {2014},
+note = {Accessed: 7 Oct. 2014},
 }
+
