small changes on information and comments

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -45,3 +45,31 @@ year = {2014},
 note = {Accessed: 7 Oct. 2014},
 }
 
+% https://renderwonk.com/publications/s2010-shading-course/snow/sigg2010_physhadcourse_ILM.pdf
+% https://developer.nvidia.com/gpugems/gpugems/part-iii-materials/chapter-17-ambient-occlusion?utm_source=chatgpt.com
+% https://en.wikipedia.org/wiki/Ambient_occlusion?utm_source=chatgpt.com
+@inproceedings{snow2010,
+  author = {Ben Snow},
+  title = {Physically-Based Shading at ILM},
+  booktitle = {SIGGRAPH 2010: Advances in Real-Time Rendering in 3D Graphics and Games},
+  year = {2010},
+  url = {https://renderwonk.com/publications/s2010-shading-course/snow/sigg2010_physhadcourse_ILM.pdf}
+}
+
+@incollection{bunnell2004,
+  author = {Michael Bunnell},
+  title = {Chapter 17. Ambient Occlusion},
+  booktitle = {GPU Gems},
+  editor = {Randima Fernando},
+  publisher = {Addison-Wesley},
+  year = {2004},
+  url = {https://developer.nvidia.com/gpugems/gpugems/part-iii-materials/chapter-17-ambient-occlusion?utm_source=chatgpt.com}
+}
+
+@misc{wikipedia_ao,
+  author = {{Wikipedia contributors}},
+  title = {Ambient Occlusion},
+  year = {2023},
+  url = {https://en.wikipedia.org/wiki/Ambient_occlusion?utm_source=chatgpt.com},
+  note = {Accessed: 7 Oct. 2023}
+}
