modifications on materials, textures and liquid tags

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -39,7 +39,7 @@ author = {TOM McREYNOLDS and DAVID BLYTHE}
 
 @misc{hystory-background,
 author = {NEO January, et al.},
-title = {Ben Snow: the evolution of ILM’s lighting tools},
+title = {Ben Snow: the evolution of ILM's lighting tools},
 url = {https://www.fxguide.com/fxfeatured/ben-snow-the-evolution-of-ilm-lighting-tools/},
 year = {2014},
 note = {Accessed: 7 Oct. 2014},
