ambient occlusion improvements and Reflection occlusion

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -37,7 +37,7 @@ url = {https://www.sciencedirect.com/science/article/pii/B9781558606593500172},
 author = {TOM McREYNOLDS and DAVID BLYTHE}
 }
 
-@misc{hystory-background,
+@misc{history-background,
 author = {NEO January, et al.},
 title = {Ben Snow: the evolution of ILM's lighting tools},
 url = {https://www.fxguide.com/fxfeatured/ben-snow-the-evolution-of-ilm-lighting-tools/},
