some information on ambient occlusion

--- a/_bibliography/ao_references.bib
+++ b/_bibliography/ao_references.bib
@@ -73,3 +73,11 @@ note = {Accessed: 7 Oct. 2014},
   url = {https://en.wikipedia.org/wiki/Ambient_occlusion?utm_source=chatgpt.com},
   note = {Accessed: 7 Oct. 2023}
 }
+
+@misc{learnopengl_diffuse_irradiance,
+  author = {{Joey de Vries}},
+  title = {Diffuse Irradiance},
+  year = {n.d.},
+  url = {https://learnopengl.com/PBR/IBL/Diffuse-irradiance},
+  note = {Accessed: 7 Oct. 2023}
+}
