improved ao mylearning and skcg markdown contents

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,15 +1,25 @@
-@article{my001,
-  title     = {The Ruby Programming Language},
-  author    = {Flanagan, David and Matsumoto, Yukihiro},
-  year      = {2008},
-  publisher = {O'Reilly Media}
+@incollection{my001,
+  author    = "Shapiro, Howard M.",
+  editor    = "Hawley, Teresa S. and Hawley, Robert G.",
+  title     = "Flow Cytometry: The Glass Is Half Full",
+  booktitle = "Flow Cytometry Protocols",
+  year      = 2018,
+  publisher = "Springer",
+  address   = "New York, NY",
+  pages     = "1--10",
+  doi = {https://doi.org/10.1016/B978-155860659-3.50017-2},
+  url = {https://www.sciencedirect.com/science/article/pii/B9781558606593500172},
+
 }
 
 @book{ruby,
   title     = {The Ruby Programming Language},
   author    = {Flanagan, David and Matsumoto, Yukihiro},
   year      = {2008},
-  publisher = {O'Reilly Media}
+  publisher = {O'Reilly Media},
+  doi = {https://doi.org/10.1016/B978-155860659-3.50017-2},
+  url = {https://www.sciencedirect.com/science/article/pii/B9781558606593500172},
+
 }
 
 @misc{CitekeyMisc,
