--- a/_drafts/2025-09-15-GPR.markdown
+++ b/_drafts/2025-09-15-GPR.markdown
@@ -683,6 +683,107 @@ Apply solvers
 ## Synthesis
 ## Symetry detection
 
+# Session 3
+in general is more complex to this, but this works for most problems to choose a solver
+1. Decide the size of the system. Depends a little bit on the system. size is  a convention made by people, not a mathematical solution
+   1. large: means matrix is sparse. 
+      1. A is symetric and positive matrix, then we can use CG
+      2. if not, Bi-CG
+      3. if it is large and dense: 
+         1. Transform into sparse
+         2. Specific solver for the problem we are going to solve.
+         3. Brute force approach: highly parallel solver + hardware
+   2. small: A symm+pos.det->cholesky
+      1. other options QR & LU decomp.
+
+## reconstruction
+Reconstruction
+      {p1 belongs to real number R^3}1<=i<=n and {n_i belongs to real number R^3}1<=i<=n. -> reconstructor -> surface (triangle mesh). For all points that belong to the surface face, q belongs to U of size n, Sphere(pi,epsilon) =>Q={q_i} p-dense w.r.t. S
+
+      P={p_i}, pi=q_i+e_i, q_i belongs to S
+
+      ||e_i||<& => P is delta-noisy
+      If P is delta-noisy w.r.t. Q set inside S set, Q is delta-dense w.r.t S
+
+      Therefore P is epsilon-dense & delta-noisy w.r.t. S
+
+What we usually do is:
+  - Ponit cloud -> reconstruct -> implicit function == f D->R where D intersects R^3 -> isosurface extraction -> triangle mesh
+    - f(p) = 0  -> P is S
+    - f(p)>0 -> P outside S
+    - f(p)<0 -> p inside S
+
+## algorithms for reconstructions
+- A_inverted_symbol _i where 1<=i<=n f(p_i)=0 -> interpolatory
+
+- A_inverted_symbol _i where 1<=i<=n f(p_i) close_to 0 -> approximative
+
+* Hoppe et al. qa
+  This is NOT a smooth function
+
+  f(p)
+    i <- Index of p_i closest to p.
+    z <- p-((p-p_i)*n_i)*n_i
+    if distance (z_i,p_i)<= delta+f then f(p) <-(p-p_i)*n_i
+    else f(p) <- undefined
+
+  * problems:
+    * having f(p) undefined means we are going to get holes
+    * Discontinuities: all this algorithm is interpolatory, these methods are usually not desired
+* Moving least squares:
+  This is a smooth function. Approximative algorithm. No holes, no quality for empty space.
+
+  f_i(p) = (p-p_i)*n_i == bump function
+
+  f(p)=sum(n, i=1) W_i(p) f_i(p) / sum(n, i=1) W_i(p)
+
+  for the weight function W_i(p) we can choose whatever we see fit. W_i(p) = exp(-||p-p_i||^2 / euro_symbol^2)/A_i where A_i is #points closest to p than euro_symbol
+    Asks for p to be euro_symbol-dense
+
+* Radial Basis Functions
+  Prior information, usually smooth prior
+  The sumation of the "n" bump functions pases through some points but not necessarily over others. f(p)=c_1 * f_1(p) + c_2 * f_2(p) - c_3 f_3(p)
+
+  f(p_1)=f(p_2)=f(p_3) = 0
+
+
+  (p_i,v_i) with   1<=i<=n
+    f(p_i)=v_i
+    f(p)=sum(n,i=1) C_i f_i(p)
+    f_i(p)=phi(||p-p_i||)
+    phi(r)=exp(-r^2/2c)
+
+    f(p_i)=v_i=sum() c_i phi(||p-p_i||)
+
+      n equations 
+      c_i = n variables
+    
+    A*c = v | A = [[phi(||p_1-p_1||), ..., phi(||p_n-p_n||)] [...] [phi(||p_1-p_n) ... phi(||p_n-p_n)]]
+
+  * problems
+    * As we have defined v=0=> C=0
+      The solution to this:
+      We add syntetic points. For every point p_i we generate a p_i^+ equal to p_i+d*n_i
+
+      f(p_i^+) = d
+      f(p_i^-) = -d
+
+      now the problem is that we increase the size of the point sets 3 times on each direction, the result is 9 times bigger.
+
+      A*c=v becomes unstable as n increases.
+        Regularization A' = A+lambda*I
+        (A+lambda*I)*c=v
+
+      Interpolatory => Approximate
+
+    * In case we have a large point set we cant triplicate the size problem.
+      * compact support
+        * phi(r) = {exp(-r^2/2c^2),      r<3c}
+                   {0,              otherwise} 
+
+* Poisson Surface Reconstruction
+  It has a set of points and normals and tries to solve the indicator function where 0 is outside and 1 is inside
+
 <!-- You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
 Jekyll requires blog post files to be named according to the following format:
